Corrected to include reverse dependency packages for darwin

--- a/omop_tests.ipynb
+++ b/omop_tests.ipynb
@@ -11,7 +11,14 @@
    },
    "outputs": [],
    "source": [
-    "library(CDMConnector)"
+    "library(CDMConnector)\n",
+    "library(CodelistGenerator)\n",
+    "library(CohortConstructor)\n",
+    "library(CohortCharacteristics)\n",
+    "library(IncidencePrevalence)\n",
+    "library(DrugExposureDiagnostics)\n",
+    "library(CohortSurvival)\n",
+    "library(TreatmentPatterns)"
    ]
   },
   {
